scaffolds out form

--- a/index.html
+++ b/index.html
@@ -9,5 +9,18 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <div id="container">
+        <ul id="numbers">
+
+        </ul>
+        <form id="input-form">
+            <input id="number">
+            <button id="add">Add to All</button>
+            <button id="subtract">Subtract from All</button>
+            <button id="multiply">Multiply from All</button>
+            <button id="divide">Divide from All</button>
+            <button id="calculate">Calculate</button>
+        </form>
+    </div>
 </body>
 </html>
