first draft of student scaffold

--- a/index.html
+++ b/index.html
@@ -10,17 +10,24 @@
 </head>
 <body>
     <div id="container">
-        <ul id="numbers">
-
-        </ul>
-        <form id="input-form">
-            <input id="number">
+        <form id="list-manager">
+            <input id="list-number" type="text">
+            <button id="append">Append to the List</button>
+            <button id="remove">Remove from the List</button>
+            <button id="clear">Clear List</button>
+        </form>
+        <form id="change-manager">
+            <input id="numberForMath" type="text">
             <button id="add">Add to All</button>
             <button id="subtract">Subtract from All</button>
-            <button id="multiply">Multiply from All</button>
+            <button id="multiply">Multiply by All</button>
             <button id="divide">Divide from All</button>
-            <button id="calculate">Calculate</button>
         </form>
+        <div id="numbers">
+            <ul id="number-list">
+    
+            </ul>
+        </div>
     </div>
 </body>
 </html>
