adds full README, tweaks scaffold, and removes querySelector selectors

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <div id="container">
-        <form id="list-manager">
+        <form id="list-management">
             <input id="list-number" type="text">
             <button id="append">Append to the List</button>
             <button id="remove">Remove from the List</button>
             <button id="clear">Clear List</button>
         </form>
-        <form id="change-manager">
+        <form id="math-section">
             <input id="numberForMath" type="text">
             <button id="add">Add to All</button>
             <button id="subtract">Subtract from All</button>
