querySelectors all set

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <div id="container">
         <form id="list-management">
-            <input id="list-number" type="text">
+            <input id="listNumber" type="text">
             <button id="append">Append to the List</button>
             <button id="remove">Remove from the List</button>
             <button id="clear">Clear List</button>
         </form>
         <form id="math-section">
-            <input id="number-for-math" type="text">
+            <input id="numberForMath" type="text">
             <button id="add">Add to All</button>
             <button id="subtract">Subtract from All</button>
             <button id="multiply">Multiply by All</button>
