Basic functionality of array complete (append/remove/clear)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button id="divide">Divide from All</button>
         </form>
         <div id="numbers">
-            <ul id="number-list">
+            <ul id="numberList">
     
             </ul>
         </div>
