Fully functional math. Exponent function added as stretch goal

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <button id="subtract">Subtract from All</button>
             <button id="multiply">Multiply by All</button>
             <button id="divide">Divide from All</button>
+            <button id="exponent">Exponent by All</button>
         </form>
         <div id="numbers">
             <ul id="numberList">
