Final commit. All stretch goals complete

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button id="append">Append to the List</button>
             <button id="remove">Remove from the List</button>
             <button id="clear">Clear List</button>
+            <button id="removeVal">Remove value from list</button>
         </form>
         <form id="math-section">
             <input id="numberForMath" type="text">
@@ -22,7 +23,7 @@
             <button id="subtract">Subtract from All</button>
             <button id="multiply">Multiply by All</button>
             <button id="divide">Divide from All</button>
-            <button id="exponent">Exponent by All</button>
+            <button id="triangulate">Triangulate area of all</button>
         </form>
         <div id="numbers">
             <ul id="numberList">
